source/css/video.css
/* Don't add important to the rules that don't have. Under specific conditions they have priority over the thumbnail background image and they hide it */
.html5-video-player,
ytmusic-player {
  background-color: black !important;
  border-radius: 10px !important;
  background-image: url("../img/logo/full_logo.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 55%;
}

.html5-video-player video {
  opacity: 0 !important;
}

.ytp-tooltip.ytp-preview {
  background-color: #00000000 !important;
  border: none !important;
}

.ytp-tooltip.ytp-preview:not(.ytp-text-detail) .ytp-tooltip-bg {
  background-image: none !important;
  outline: 0 !important;
}

.ytp-storyboard-framepreview-img {
  background: none !important;
}

/*graphics for VR*/
.html5-video-player .html5-video-container .webgl,
.html5-video-player .ytp-webgl-spherical-control {
  display: none !important;
}

.html5-video-player video[disableremoteplayback=""] {
  display: block !important;
}

